# rust-microservices-monorepo

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  NOTE  README.org  docker-compose.yml
crates/asr_api/: Cargo.toml
crates/asr_api/src/: lib.rs
crates/asr_api/src/course/: mod.rs  routes.rs  services.rs
crates/asr_api/src/user/: mod.rs  routes.rs  services.rs
crates/asr_app/: Cargo.toml
crates/asr_app/src/: main.rs
crates/asr_core/: Cargo.toml
crates/asr_core/src/: config.rs
crates/asr_domain/: Cargo.toml
crates/asr_domain/src/user/: mod.rs  request.rs  response.rs
crates/asr_infra/: Cargo.toml
crates/asr_infra/migrations/: 20250310100645_create_users_table.down.sql  20250310100645_create_users_table.up.sql  20250310101656_create_courses_table.down.sql  20250310101656_create_courses_table.up.sql
crates/asr_infra/src/: lib.rs
crates/asr_infra/src/middleware/: map_response.rs  mw_auth.rs
crates/asr_infra/src/user/: mod.rs
crates/asr_utils/: Cargo.toml
logs/: 2025-03-10.log.2025-03-10  2025-03-11.log.2025-03-10  2025-03-11.log.2025-03-11
