[package]
name = "asr_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.204"
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }

# Members
asr_core = {path = "../asr_core"}
asr_domain = {path = "../asr_domain"}
asr_infra = {path = "../asr_infra"}
