[package]
name = "asr_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
tiberius = { version = "0.12", features = ["chrono", "tokio", "tds73"] }



# Members
asr_core = { path = "../asr_core" }
asr_infra = { path = "../asr_infra" }
asr_api = { path = "../asr_api" }
tracing-appender = "0.2.3"
chrono = "0.4.38"
